<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">
    
    <ProgressBar android:id="@+id/progressBusy"
        android:layout_width="40dip"
        android:layout_height="40dip"
        android:layout_centerInParent="true" />
    
	<ScrollView android:layout_width="fill_parent"
	    android:layout_height="match_parent"
	    android:orientation="vertical"
	    android:gravity="center">
	    <LinearLayout android:id="@+id/linView"
	        android:layout_width="fill_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical"
		    android:animateLayoutChanges="true"
		    android:padding="30dip"
		    android:visibility="gone">
		    <TextView android:id="@+id/lblPictures"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/pictures"
	            android:textAllCaps="true"/>
		    <LinearLayout android:layout_width="match_parent"
				android:layout_height="70dp"
				android:orientation="horizontal"
				android:layout_weight="4"
			    android:layout_marginTop="5dp">
			    <ImageView android:id="@+id/imageOne"
			        android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/placeholder"
					android:layout_marginRight="4dp"
					android:scaleType="centerCrop"
					android:onClick="imageOneClick" />
			    <ImageView android:id="@+id/imageTwo"
			        android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/placeholder"
					android:layout_marginRight="4dp"
					android:scaleType="centerCrop"
					android:onClick="imageTwoClick" />
			    <ImageView android:id="@+id/imageThree"
			        android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/placeholder"
					android:layout_marginRight="4dp"
					android:scaleType="centerCrop"
					android:onClick="imageThreeClick" />
			    <ImageView android:id="@+id/imageFour"
			        android:layout_width="match_parent"
					android:layout_height="match_parent"
					android:layout_weight="1"
					android:background="@drawable/placeholder"
					android:scaleType="centerCrop"
					android:onClick="imageFourClick" />
			</LinearLayout>
		    
		    <TextView android:id="@+id/lblUsername"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/username"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
		    <EditText android:id="@+id/txtUsername"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:textColor="#fff"
	            android:background="#80000000"
	            android:textSize="@dimen/font_small"
	            android:padding="5dip"
	            android:layout_marginTop="5dip"
	            android:gravity="center_vertical"
	            android:singleLine="true"/>
		    
		    <TextView android:id="@+id/lblDescription"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/description"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
		    <EditText android:id="@+id/txtDescription"
	            android:layout_width="fill_parent"
	            android:layout_height="70dip"
	            android:textColor="#fff"
	            android:background="#80000000"
	            android:textSize="@dimen/font_small"
	            android:padding="5dip"
	            android:layout_marginTop="5dip"
	            android:layout_gravity="left|top"
	            android:gravity="left|top"/>
		    
		    <TextView android:id="@+id/lblPhoneNo"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/phoneno"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
		    <EditText android:id="@+id/txtPhoneNo"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:textColor="#fff"
	            android:background="#80000000"
	            android:textSize="@dimen/font_small"
	            android:padding="5dip"
	            android:layout_marginTop="5dip"
	            android:gravity="center_vertical"
	            android:singleLine="true"
	            android:inputType="number"/>
		    
		    <TextView android:id="@+id/lblPlatNo"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/platno"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
		    <EditText android:id="@+id/txtPlatNo"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:textColor="#fff"
	            android:background="#80000000"
	            android:textSize="@dimen/font_small"
	            android:padding="5dip"
	            android:layout_marginTop="5dip"
	            android:gravity="center_vertical"
	            android:singleLine="true"/>
		    
		    <TextView android:id="@+id/lblTypeBody"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/typebody"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
		    <EditText android:id="@+id/txtTypeBody"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:textColor="#fff"
	            android:background="#80000000"
	            android:textSize="@dimen/font_small"
	            android:padding="5dip"
	            android:layout_marginTop="5dip"
	            android:gravity="center_vertical"
	            android:singleLine="true"/>
		    
		    <TextView android:id="@+id/lblTypeMesin"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/typemesin"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
		    <EditText android:id="@+id/txtTypeMesin"
	            android:layout_width="fill_parent"
	            android:layout_height="45dip"
	            android:textColor="#fff"
	            android:background="#80000000"
	            android:textSize="@dimen/font_small"
	            android:padding="5dip"
	            android:layout_marginTop="5dip"
	            android:gravity="center_vertical"
	            android:singleLine="true"/>
		    
		    <TextView android:id="@+id/lblAlamat"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/alamat"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
		    <EditText android:id="@+id/txtAlamat"
	            android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:textColor="#fff"
	            android:background="#80000000"
	            android:textSize="@dimen/font_small"
	            android:padding="5dip"
	            android:layout_marginTop="5dip"
	            android:lines="3"
			    android:gravity="top|left"
			    android:inputType="textMultiLine"/>
		    
		    <RelativeLayout android:layout_width="fill_parent"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="30dip"
	            android:animateLayoutChanges="true">
	            <TextView android:id="@+id/lblShowMe"
	                android:layout_width="wrap_content"
	                android:layout_height="45dp"
	                android:layout_centerVertical="true"
	                android:layout_marginBottom="1dip"
	                android:gravity="center_vertical"
	                android:textColor="#000"
		            android:textSize="@dimen/activity_vertical_margin"
		            android:text="@string/showme"
		            android:textAllCaps="true"
		            android:paddingRight="40dip" />
	            <CheckBox android:id="@+id/checkShowMe"
	                android:layout_width="30dp"
	                android:layout_height="30dp"
	                android:layout_alignParentRight="true"
	                android:layout_centerVertical="true"
	                android:layout_marginBottom="1dip" />
	        </RelativeLayout>
		    
		    <Button android:id="@+id/btnSubmit"
	            android:layout_width="fill_parent"
	            android:layout_height="50dip"
	            android:textColor="#fff"
	            android:background="#000000"
	            android:textSize="@dimen/font_small"
	            android:text="@string/submit"
	            android:textAllCaps="true"
	            android:layout_marginTop="30dip"/>
	    </LinearLayout>
	</ScrollView>
</RelativeLayout>